Fix: Removed overflow of main grid

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,8 @@
     height: 100vh;
 
     #sceneWrapper {
+        display: flex;
+
         #sceneCanvas {
             width: 100%;
             height: 100vh;
